[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/components/bullet-related/BulletSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/base_templates/base_npc/base_npc.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/enemies/EnemyGunner/states/AttackGunner.gd" type="Script" id=3]
[ext_resource path="res://src/components/bullet-related/bullet_emitters/BulletEmitterSpread.gd" type="Script" id=4]
[ext_resource path="res://src/components/dust_spawner/DustSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/components/bullet-related/bullet type/EnemyBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/entities/enemies/SharedStates/Chase.gd" type="Script" id=7]
[ext_resource path="res://src/entities/enemies/BurglarEnemyGunner/BurglarEnemyGunner.gd" type="Script" id=9]
[ext_resource path="res://src/entities/enemies/SharedStates/Idle.gd" type="Script" id=10]
[ext_resource path="res://assets/entities/enemies/gunner/sergeant_sir_giant_hand_gun_64x64.png" type="Texture" id=11]
[ext_resource path="res://assets/entities/enemies/gunner/sergeant_sir_giant_128x128_5x9.png" type="Texture" id=12]
[ext_resource path="res://src/entities/enemies/SharedStates/Pain.gd" type="Script" id=13]
[ext_resource path="res://sounds/weapons/gunner/EFX EXT .50 Cal Pistol Shots 02 A.wav" type="AudioStream" id=14]
[ext_resource path="res://src/environment/burglar_base_world/tiles/VisionArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/entities/enemies/BurglarEnemyGunner/states/Search.gd" type="Script" id=16]
[ext_resource path="res://src/entities/enemies/BurglarEnemyGunner/states/Knockout.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 45, 61 )

[sub_resource type="CircleShape2D" id=9]
radius = 72.0

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 128, 128 )

[sub_resource type="VisualShaderNodeColorConstant" id=1]

[sub_resource type="VisualShaderNodeTexture" id=2]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=3]
operator = 6

[sub_resource type="VisualShaderNodeVectorOp" id=4]
operator = 2

[sub_resource type="VisualShaderNodeBooleanUniform" id=5]
uniform_name = "active"

[sub_resource type="VisualShader" id=6]
code = "shader_type canvas_item;
uniform bool active;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// BooleanUniform:9
	bool n_out9p0 = active;

// Color:11
	vec3 n_out11p0 = vec3(1.000000, 1.000000, 1.000000);
	float n_out11p1 = 1.000000;

// VectorOp:6
	vec3 n_out6p0 = vec3(n_out9p0 ? 1.0 : 0.0) * n_out11p0;

// VectorOp:5
	vec3 n_out5p0 = max(n_out3p0, n_out6p0);

// Output:0
	COLOR.rgb = n_out5p0;
	COLOR.a = n_out3p1;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1040, 60 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( 600, -40 )
nodes/fragment/5/node = SubResource( 3 )
nodes/fragment/5/position = Vector2( 860, -60 )
nodes/fragment/6/node = SubResource( 4 )
nodes/fragment/6/position = Vector2( 600, 100 )
nodes/fragment/9/node = SubResource( 5 )
nodes/fragment/9/position = Vector2( 400, 0 )
nodes/fragment/11/node = SubResource( 1 )
nodes/fragment/11/position = Vector2( 400, 120 )
nodes/fragment/connections = PoolIntArray( 3, 1, 0, 1, 3, 0, 5, 0, 6, 0, 5, 1, 5, 0, 0, 0, 9, 0, 6, 0, 11, 0, 6, 1 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/active = false

[sub_resource type="Resource" id=10]
resource_local_to_scene = true
script = ExtResource( 4 )
amount = 3
spread_angle = 5.0

[sub_resource type="Animation" id=13]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Visuals/DustSpawner")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "Hit_Back"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}

[sub_resource type="Animation" id=23]
resource_name = "Hit_Front"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Sprite/HandGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 45 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Sprite/HandGun:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Visuals/DustSpawner")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SoundMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "Footstep" ],
"method": "play_sound"
}, {
"args": [ "Footstep" ],
"method": "play_sound"
} ]
}

[sub_resource type="CapsuleShape2D" id=19]
radius = 5.0
height = 64.0

[node name="BurglarEnemyGunner" groups=["ENEMY"] instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 9 )

[node name="SearchDirections" type="Node2D" parent="." index="0"]

[node name="Right" type="Position2D" parent="SearchDirections" index="0"]
position = Vector2( 8, 0 )

[node name="Left" type="Position2D" parent="SearchDirections" index="1"]
position = Vector2( -8, 0 )

[node name="Up" type="Position2D" parent="SearchDirections" index="2"]
position = Vector2( 0, -8 )

[node name="Down" type="Position2D" parent="SearchDirections" index="3"]
position = Vector2( 0, 8 )

[node name="Hurtbox" parent="Areas" index="0"]
visible = false
collision_layer = 128

[node name="HurtboxShape" parent="Areas/Hurtbox" index="0"]
position = Vector2( 1, -61 )
shape = SubResource( 8 )

[node name="AttackRange" parent="Areas" index="1"]
collision_mask = 2

[node name="AttackRangeShape" parent="Areas/AttackRange" index="0"]
position = Vector2( 0, -32 )
shape = SubResource( 9 )

[node name="VisionDirection" type="Position2D" parent="Visuals" index="0"]

[node name="VisionArea" parent="Visuals/VisionDirection" index="0" instance=ExtResource( 15 )]
position = Vector2( 107, 0 )

[node name="CollisionShape2D2" parent="Visuals/VisionDirection/VisionArea" index="0"]
shape = SubResource( 24 )

[node name="Vision" parent="Visuals/VisionDirection/VisionArea" index="1"]
scale = Vector2( 4, 4 )

[node name="Sprite" parent="Visuals" index="1"]
material = SubResource( 7 )
position = Vector2( 0, -56 )
texture = ExtResource( 12 )
hframes = 9
vframes = 5

[node name="HandGun" type="Sprite" parent="Visuals/Sprite" index="0"]
position = Vector2( 5, 45 )
texture = ExtResource( 11 )
offset = Vector2( 22, -9 )

[node name="BulletSpawner" parent="Visuals/Sprite/HandGun" index="0" instance=ExtResource( 1 )]
position = Vector2( 52, -10 )
bullet_scene = ExtResource( 6 )
shot_delay = 1.0
bullet_speed = 225.0
knockback_value = 1000
bullet_emitter = SubResource( 10 )

[node name="DustSpawner" parent="Visuals" index="2" instance=ExtResource( 5 )]

[node name="HealthManager" parent="." index="3"]
max_health = 1.0

[node name="Animations" type="AnimationPlayer" parent="AnimationMachine" index="0"]
root_node = NodePath("../..")
anims/Death = SubResource( 13 )
anims/Hit_Back = SubResource( 22 )
anims/Hit_Front = SubResource( 23 )
anims/Idle = SubResource( 14 )
anims/RESET = SubResource( 15 )
anims/Run = SubResource( 16 )

[node name="StateMachine" parent="." index="6"]
initial_state = NodePath("Chase")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 10 )

[node name="Chase" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 3 )

[node name="Pain" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 13 )

[node name="Search" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 16 )

[node name="Death" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="StateMachine/Death" index="0"]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SoundMachine/Attack" index="0"]
stream = ExtResource( 14 )
volume_db = -12.0

[node name="HealthBar" parent="." index="8"]
position = Vector2( 0, -133 )

[node name="Line2D" type="Line2D" parent="Debug" index="0"]

[node name="PhysicsCollider" parent="." index="11"]
shape = SubResource( 19 )

[node name="NavigationAgent2D" parent="." index="13"]
radius = 200.0

[editable path="Areas/Hurtbox"]
[editable path="Visuals/VisionDirection/VisionArea"]
